Release 3.4.3
=============

Bugs fixed
----------

- Calling mod:`rpy2.situation` to report on the environment no longer
  stops with an uncaught exception when no R home can be determined
  (issue #774)

- Converting pandas series with the older numpy types could result
  in an error (issue #781)

 
Release 3.4.2
=============

Bugs fixed
----------

- Multithreading during the initialization of the embedded R no longer
  triggers a fatal error (issue #729)

Changes
-------

- :mod:`pytest` is now an optional package. Optional sets of packages are
  `numpy`, `pandas`, `test`, and `all` (all optional packages). They
  can be specified during the installation. For example
  `pip install rpy2[test]`. (issue #670)


Release 3.4.1
=============

Bugs fixed
----------

- The file `requirements.txt` was missing from the source distribution
  on pypi (issue #764).


Release 3.4.0
=============

New Features
------------

- The mapping of the R C API now includes `Rf_isSymbol()`.

- Singleton class :class:`rpy2.rinterface_lib.sexp.RVersion` to report
  the R version for the embedded R.

- :func:`rpy2.rinterface.local_context` to create a context manager
  to evaluate R code within a local environment.

- The `staticmethod` :meth:`rpy2.robjects.vectors.DateVector.isrinstance`
  will tell whether an R objects is an R `Date` array.

Changes
-------

- The dynamic generation of docstrings for R man pages
  is now using R's `Rd2txt`.

- The :func:`rpy2.rinterface_lib._rinterface_capi._findVarInFrame`
  is replaced by the function
  :func:`rpy2.rinterface_lib._rinterface_capi._findvar_in_frame`
  (see fix to issue #710).

- The functions :func:`rpy2.robjects.numpy.activate()` and
  :func:`rpy2.robjects.pandas.activate()` are deprecated and will
  be removed in rpy2-3.5.0.

- :func:`rpy2.rinterface_lib.embedded.setinitialized` was renamed to
  :func:`rpy2.rinterface_lib.embedded._setinitialized` to indicate that
  one should not use it.
